# DEF-task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dismantling_samokat/: app.py  database.py  mainpars.py  models.py
