[tool.poetry]
name = "dismantling-samokat"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "dismantling_samokat"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
selenium = "^4.14.0"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
flask = "^3.0.0"
flask-admin = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
